# zero2prod

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.migrations  README.md  configuration.yaml  docker-compose.dev-env.yml
configuration/: base.yaml  production.yaml
migrations/: 20221111234424_table_create_users.sql  20221114170426_seed_user.sql  20221117210819_table_create_idempotency.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
